--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,16 @@ spring.datasource.username=root
 spring.datasource.password=rugved@1993
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+server.port=5000
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://firstrdsinstance.cvsuwe2goxuz.eu-north-1.rds.amazonaws.com/demob
+#spring.datasource.username=admin
+#spring.datasource.password=admin123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql= true
+
+
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
